[4단계 - 동시성 확장하기] 제프(변우영) 미션 제출합니다. (#1088)
* refactor: 정적 리소스 읽기 방식 통일

- 텍스트 파일과 바이너리 파일 모두 Files.readAllBytes를 사용하도록 통일
- ContentType의 바이너리 확인 메서드 제거

* fix: LoginController의 doGet 로직 수정

* feat: 고정 스레드 풀 추가

* refactor: 동시성 문제 해결 위해 Session과 SessionManager 컬렉션을 ConcurrentHashMap으로 변경

* refactor: Connector stop 호출 시, 스레드풀 종료하도록 수정